# etrack

./: .gitignore  LICENSE  README.md  build_docs.sh  mkdocs.yml  pyproject.toml  setup.py
docs/: installation.md  intro_plots.py  introduction.md  trackingdata.md
etrack/: __init__.py  arena.py  image_marker.py  info.py  tracking_data.py  tracking_result.py  util.py
etrack/io/: nixtrack_data.py
src/etrack/: __init__.py  arena.py  image_marker.py  info.json  info.py  tracking_data.py  tracking_result.py  util.py
src/etrack/io/: __init__.py  dlc_data.py  ioclasses.py  nixtrack_data.py
test/: dlc_testfile.h5  sleap_testfile.nix  test_arena.py  test_io.py  test_nixtrackio.py  test_trackdata.py  test_trackingresults.py  test_util.py
